2009-05-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelopNUnit.addin.xml: Added Run Test With submenu,
	  with support for all registered modes.

	* Gui/TestPad.cs:
	* Services/UnitTest.cs:
	* Services/TestContext.cs: Track api changes.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelopNUnit.addin.xml: Changed copyright tag.

2009-04-24  Mike Krüger  <mkrueger@novell.com>

	* AssemblyInfo.cs: Changed assembly info.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* Gui/TestResultsPad.cs: Renamed PixbufService to
	  ImageService.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* Gui/TestResultsPad.cs: Track API changes.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.NUnit.csproj: don't require specific
	gtk-sharp version.

2009-04-17  Mike Krüger  <mkrueger@novell.com>

	* Gui/NUnitOptionsPanel.cs:
	* Services/NUnitService.cs:
	* MonoDevelopNUnit.addin.xml:
	* Gui/UnitTestOptionsDialog.cs: translated the option panels
	  to the new option structure.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelopNUnit.addin.xml: Bump MD version.

2009-03-20  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/NUnitProject.xpt.xml: Reference the version of
	  NUnit that we ship with MD.

2009-03-05  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/NUnitAssemblyTestSuite.cs: Improved error message.

2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/TestPad.cs:
	* Services/UnitTest.cs:
	* Services/TestContext.cs:
	* Services/NUnitService.cs:
	* Services/NUnitAssemblyTestSuite.cs:
	* Services/NUnitProjectServiceExtension.cs: Changed the way
	  execution handlers work. We are not using platform ids
	  anymore. Instead, we use command strings when looking for
	  execution handlers. IExecutionHandlerFactory has been
	  removed and now everything is handled by IExecutionHandler,
	  which has a new CanExecute method. This model is more simple
	  and more generic.
