@@ -134,6 +134,15 @@ namespace MonoDevelop.NUnit
 			return tres;
 		}
 		
+		protected override bool OnCanRun (MonoDevelop.Core.Execution.IExecutionHandler executionContext)
+		{
+			foreach (UnitTest t in Tests)
+				if (!t.CanRun (executionContext))
+					return false;
+			return true;
+		}
+
+		
 		protected virtual void OnBeginTest (TestContext testContext)
 		{
 		}
